--- a/public/css/volt.css
+++ b/public/css/volt.css
@@ -19000,3 +19000,18 @@ article .h1, article .h2, article .h3, article .h4, article .h5, article .h6 {
 
 .datepicker-dropdown {
   z-index: 9999; }
+
+/* Default styles for unchecked state */
+.form-check-input.status:not(:checked) , .form-check-label::before {
+  background-color: black;
+}
+
+/* Styles for checked state */
+.form-check-input.status:checked , .form-check-label::before {
+  background-color: green;
+}
+
+/* Styles for the label (optional) */
+.form-check-label {
+  color: black; /* Change the color of the label text */
+}
